# the-pack

./: .gitignore  .pre-commit-config.yaml  COMPLIANCE.md  Makefile  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  schemas.py
backend/app/bus/: redis_stream.py
backend/app/core/: intake.py  middleware.py
backend/app/db/: migrate.py  pool.py  repo.py  schema.sql
backend/app/db/migrations/: 0002_foreign_keys.sql
backend/app/engine/: benchmark.py  boundary.py  forge.py  ids.py  refine.py  registry.py  relay.py  startup.py  supervisor.py  wolves.py
backend/app/engine/strategies/: base.py  critique.py  deep_dive.py  orchestrate.py
backend/app/events/: models.py
backend/app/qwen/: client.py  fake.py  pricing.py  types.py
backend/app/routers/: documents.py  hunts.py  instincts.py  memory.py  projects.py  system.py  tools.py
backend/app/tools/: _ssrf.py  file_parse.py  memory.py  search_provider.py  transcribe.py  vision.py  web.py
backend/app/tools/providers/: base.py  readers.py
backend/schema/: README.md  events.schema.json
backend/scripts/: gen_postman.py  hello_pack.py  live_hunt.py
backend/tests/: _fakes.py  conftest.py  test_completion.py  test_contract.py  test_endpoints_v4v5.py  test_file_parse.py  test_http_commands.py  test_intake.py  test_offline_hunt.py  test_outbox_relay.py  test_providers.py  test_registry.py  test_repo.py  test_ssrf.py
deploy/: .env.prod.example  DEPLOY.md  docker-compose.prod.yml  engine.Dockerfile  gateway.Dockerfile  nginx.conf  web.Dockerfile
(+99 files in other folders)
