[project]
name = "pack-engine"
version = "0.1.0"
description = "Pack — the Python brain. The whole engine: Alpha loop, wolves, tools, Boundary, the event spine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "openai>=1.40",
    "asyncpg>=0.29",
    "jsonschema>=4.22",
    "python-ulid>=2.7",
    "httpx>=0.27",
    "pypdf>=4.2",
    "python-multipart>=0.0.9",
    "reportlab>=4.2",
    "python-docx>=1.1",
    "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
